--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news-react",
   "version": "0.1.0",
-  "homepage": "https://ahmadsabili0081.github.io/news-agregator/",
+  "homepage": "https://ahmadsabili0081.github.io/news-agregator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -21,9 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
